Time: 15 ms (52.64%), Space: 47.6 MB (16.27%) - LeetHub